feat: Integrate html-to-image for screenshotting
Adds the `html-to-image` dependency and updates the import map to allow dynamic import. This enables the application to capture the generated song content as an image, facilitating sharing and saving of the creative output.

Also includes minor refactoring in the song generator component to prepare for future features related to image generation and parameter presets.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       }
     }
   </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js" integrity="sha512-7tWCg03A4kL5pTz/C399n3IuEa9BfHIUFdIhd2Tj3XjLAL1LgD01M0nZ1hG44A2gGFV/rCXgB2T9Dk/C0n1Ecg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="importmap">
 {
   "imports": {
@@ -40,7 +39,8 @@
     "@angular/core": "https://next.esm.sh/@angular/core@^20.3.9?external=rxjs",
     "@angular/forms": "https://next.esm.sh/@angular/forms@^20.3.9?external=rxjs",
     "@angular/common": "https://next.esm.sh/@angular/common@^20.3.9?external=rxjs",
-    "@google/genai": "https://next.esm.sh/@google/genai@^1.28.0?external=rxjs"
+    "@google/genai": "https://next.esm.sh/@google/genai@^1.28.0?external=rxjs",
+    "html-to-image": "https://esm.sh/html-to-image@1.11.11"
   }
 }
 </script>
