--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           boxShadow: {
             'neon-indigo': '0 0 5px #6366f1, 0 0 10px #6366f1, 0 0 15px #818cf8',
             'neon-pink': '0 0 5px #ec4899, 0 0 10px #ec4899, 0 0 15px #f9a8d4',
+            'neon-cyan': '0 0 5px #06b6d4, 0 0 10px #06b6d4, 0 0 15px #67e8f9',
+            'neon-purple': '0 0 5px #a855f7, 0 0 10px #a855f7, 0 0 15px #d8b4fe',
           }
         }
       }
